--- a/index.html
+++ b/index.html
@@ -28,33 +28,33 @@
   .container {
     max-width: 700px;
     width: 95%;
-    margin: 20px;
-    padding: 30px;
+    margin: 10px; /* Adjusted */
+    padding: 15px; /* Adjusted */
     background: #ffffff;
     border-radius: 12px;
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
   }
   h2 {
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 15px; /* Adjusted */
     color: var(--dark-text);
-    font-size: 24px;
+    font-size: 20px; /* Adjusted */
     font-weight: 600;
   }
   label {
     display: block;
-    margin-top: 15px;
+    margin-top: 10px; /* Adjusted */
     font-weight: 600;
     color: var(--dark-text);
-    font-size: 14px;
+    font-size: 13px; /* Adjusted */
   }
   input, select {
     width: 100%;
-    padding: 10px;
+    padding: 8px; /* Adjusted */
     margin-top: 5px;
     border-radius: 6px;
     border: 1px solid var(--medium-gray);
-    font-size: 14px;
+    font-size: 13px; /* Adjusted */
     box-sizing: border-box;
     transition: border-color 0.3s, box-shadow 0.3s;
   }
@@ -69,7 +69,7 @@
   .drop-zone {
     border: 3px dashed var(--primary-blue);
     background: #e6f0ff;
-    padding: 30px;
+    padding: 20px; /* Adjusted */
     text-align: center;
     cursor: pointer;
     margin-bottom: 15px;
@@ -81,14 +81,14 @@
     border-color: var(--dark-blue);
   }
   .drop-zone p {
-    font-size: 16px;
+    font-size: 14px; /* Adjusted */
     color: var(--dark-blue);
     margin: 0;
   }
   .image-list-container {
     border: 1px solid var(--medium-gray);
-    min-height: 120px;
-    max-height: 180px;
+    min-height: 100px; /* Adjusted */
+    max-height: 150px; /* Adjusted */
     overflow-y: auto;
     padding: 10px;
     margin-bottom: 15px;
@@ -100,8 +100,8 @@
     justify-content: flex-start;
   }
   .image-item {
-    width: 70px;
-    height: 70px;
+    width: 50px; /* Adjusted */
+    height: 50px; /* Adjusted */
     object-fit: contain;
     border: 1px solid var(--medium-gray);
     border-radius: 6px;
@@ -113,17 +113,17 @@
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
-    margin-top: 20px;
+    margin-top: 15px; /* Adjusted */
   }
   button {
     flex: 1;
-    padding: 12px 20px;
+    padding: 10px 15px; /* Adjusted */
     background-color: var(--primary-blue);
     color: white;
     border: none;
     border-radius: 6px;
     cursor: pointer;
-    font-size: 14px;
+    font-size: 13px; /* Adjusted */
     font-weight: 600;
     transition: background-color 0.3s, transform 0.1s;
   }
@@ -142,13 +142,14 @@
   }
   .status-message {
     text-align: center;
-    margin-top: 15px;
-    font-size: 14px;
+    margin-top: 10px; /* Adjusted */
+    font-size: 12px; /* Adjusted */
     color: var(--dark-text);
   }
   @media (max-width: 600px) {
     .container {
-      padding: 20px;
+      padding: 15px; /* Adjusted */
+      margin: 10px; /* Adjusted */
     }
     .button-group button {
       flex: 1 1 100%;
@@ -170,16 +171,16 @@
 </div>
 
 <label for="vesselName">3LC_VesselName: <span class="required-label">*</span></label>
-<input type="text" id="vesselName" class="required" placeholder="e.g., KOS-CMA-CGM-APL">
+<input type="text" id="vesselName" class="required" placeholder="e.g., NCL_RoyalClipper">
 
 <label for="antennaModel">AntennaBrandModel_SNxxx: <span class="required-label">*</span></label>
-<input type="text" id="antennaModel" class="required" placeholder="e.g., Intellian-v100-24536">
+<input type="text" id="antennaModel" class="required" placeholder="e.g., Intellian-v100_SN24536">
 
 <label for="antennaLocation">Antenna Location: <span class="required-label">*</span></label>
 <input type="text" id="antennaLocation" class="required" placeholder="e.g., Deck 1 Starboard">
 
 <label for="caseNumber">Case Number: <span class="required-label">*</span></label>
-<input type="text" id="caseNumber" class="required" placeholder="e.g., INC-12345678">
+<input type="text" id="caseNumber" class="required" placeholder="e.g., 35234">
 
 <label for="submittedBy">Submitted By: <span class="required-label">*</span></label>
 <input type="text" id="submittedBy" class="required" placeholder="e.g., Pablo Garcia">
