--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
 
     <button type="submit">Send Message</button>
   </form>
-  <a href="testpic2PDF.html" class="back-btn">← Back to Generator</a>
+  <a href="index.html" class="back-btn">← Back to Generator</a>
 </div>
 
 <script>
@@ -115,4 +115,5 @@ document.getElementById('contactForm').addEventListener('submit', function(e) {
 });
 </script>
 </body>
+
 </html>
