--- a/index.html
+++ b/index.html
@@ -368,39 +368,43 @@ generateBtn.addEventListener('click', async () => {
   statusMessage.textContent = '';
   generateBtn.disabled = true;
 
-  const requiredIds = ["vesselName","antennaModel","antennaLocation","caseNumber","submittedBy","dateField"];
+  const requiredIds = ["vesselName", "antennaModel", "antennaLocation", "caseNumber", "submittedBy", "dateField"];
   let valid = true;
   requiredIds.forEach(id => {
     const f = document.getElementById(id);
-    if(!f.value.trim()){
+    if (!f.value.trim()) {
       f.classList.add("invalid");
       valid = false;
     } else {
       f.classList.remove("invalid");
     }
   });
-  if(!valid){
+  if (!valid) {
     statusMessage.textContent = "Please fill all required fields!";
     generateBtn.disabled = false;
     return;
   }
-  if(images.length === 0 && attachments.length === 0){
+  if (images.length === 0 && attachments.length === 0) {
     statusMessage.textContent = "Add at least one image or attachment.";
     generateBtn.disabled = false;
     return;
   }
 
-  statusMessage.textContent = "Generating PDF and ZIP...";
+  statusMessage.textContent = "Generating PDF...";
 
   const vessel = document.getElementById('vesselName').value.trim();
   const antenna = document.getElementById('antennaModel').value.trim();
-  const location = document.getElementById('antennaLocation').value.trim();
+  const location = document.getElementById('antennaLocation').value.trim().toUpperCase(); // <-- Converted to uppercase here
   const caseNum = document.getElementById('caseNumber').value.trim();
   const submitted = document.getElementById('submittedBy').value.trim();
   const dateStr = document.getElementById('dateField').value;
   const perPage = parseInt(document.getElementById('imagesPerPage').value);
 
-  const pdf = new jsPDF({ orientation: 'landscape', unit: 'pt', format: 'a4' });
+  const pdf = new jsPDF({
+    orientation: 'landscape',
+    unit: 'pt',
+    format: 'a4'
+  });
   const pageWidth = pdf.internal.pageSize.getWidth();
   const pageHeight = pdf.internal.pageSize.getHeight();
 
@@ -412,76 +416,117 @@ generateBtn.addEventListener('click', async () => {
     const logoHeight = (logo.height * logoWidth) / logo.width;
     pdf.addImage(logo, 'PNG', (pageWidth - logoWidth) / 2, 50, logoWidth, logoHeight);
   }
-  pdf.setFontSize(26).setFont('helvetica','bold');
-  pdf.text(vessel, pageWidth/2, 250, { align: 'center' });
+  pdf.setFontSize(26).setFont('helvetica', 'bold');
+  pdf.text(vessel, pageWidth / 2, 250, {
+    align: 'center'
+  });
   pdf.setFontSize(22);
-  pdf.text(`${antenna} (${location})`, pageWidth/2, 290, { align: 'center' });
+  pdf.text(`${antenna} (${location})`, pageWidth / 2, 290, {
+    align: 'center'
+  });
   pdf.setFontSize(18);
-  pdf.text(`Case Number: ${caseNum}`, pageWidth/2, 330, { align: 'center' });
+  pdf.text(`Case Number: ${caseNum}`, pageWidth / 2, 330, {
+    align: 'center'
+  });
   pdf.setFontSize(14);
-  pdf.text(`Submitted By: ${submitted}`, pageWidth/2, 360, { align: 'center' });
-  pdf.text(`Date: ${dateStr}`, pageWidth/2, 385, { align: 'center' });
+  pdf.text(`Submitted By: ${submitted}`, pageWidth / 2, 360, {
+    align: 'center'
+  });
+  pdf.text(`Date: ${dateStr}`, pageWidth / 2, 385, {
+    align: 'center'
+  });
 
   if (images.length > 0 || attachments.length > 0) pdf.addPage();
 
   let pageNum = 2;
-  for(let i=0;i<images.length;i+=perPage){
-    const chunk = images.slice(i,i+perPage);
-    const spacingX=10, spacingY=10;
+  for (let i = 0; i < images.length; i += perPage) {
+    const chunk = images.slice(i, i + perPage);
+    const spacingX = 10,
+      spacingY = 10;
     let cellWidth, cellHeight;
-    if(perPage===1){
-      cellWidth=pageWidth-2*spacingX; cellHeight=pageHeight-2*spacingY;
-      await addImageToPDF(pdf,chunk[0],spacingX,spacingY,cellWidth,cellHeight);
-    } else if(perPage===4){
-      cellWidth=(pageWidth-3*spacingX)/2; cellHeight=(pageHeight-3*spacingY)/2;
-      for(let idx=0;idx<chunk.length;idx++){
-        let row=Math.floor(idx/2),col=idx%2;
-        await addImageToPDF(pdf,chunk[idx],
-          spacingX+col*(cellWidth+spacingX),
-          spacingY+row*(cellHeight+spacingY),
-          cellWidth,cellHeight);
+    if (perPage === 1) {
+      cellWidth = pageWidth - 2 * spacingX;
+      cellHeight = pageHeight - 2 * spacingY;
+      await addImageToPDF(pdf, chunk[0], spacingX, spacingY, cellWidth, cellHeight);
+    } else if (perPage === 4) {
+      cellWidth = (pageWidth - 3 * spacingX) / 2;
+      cellHeight = (pageHeight - 3 * spacingY) / 2;
+      for (let idx = 0; idx < chunk.length; idx++) {
+        let row = Math.floor(idx / 2),
+          col = idx % 2;
+        await addImageToPDF(pdf, chunk[idx],
+          spacingX + col * (cellWidth + spacingX),
+          spacingY + row * (cellHeight + spacingY),
+          cellWidth, cellHeight);
       }
     } else {
-      cellWidth=(pageWidth-(perPage+1)*spacingX)/perPage;
-      cellHeight=pageHeight-2*spacingY;
-      for(let idx=0;idx<chunk.length;idx++){
-        await addImageToPDF(pdf,chunk[idx],
-          spacingX+idx*(cellWidth+spacingX),spacingY,
-          cellWidth,cellHeight);
+      cellWidth = (pageWidth - (perPage + 1) * spacingX) / perPage;
+      cellHeight = pageHeight - 2 * spacingY;
+      for (let idx = 0; idx < chunk.length; idx++) {
+        await addImageToPDF(pdf, chunk[idx],
+          spacingX + idx * (cellWidth + spacingX), spacingY,
+          cellWidth, cellHeight);
       }
     }
-    pdf.setFontSize(12).text(`Page ${pageNum}`, pageWidth/2,pageHeight-10,{align:'center'});
-    if(i+perPage<images.length) pdf.addPage();
+    pdf.setFontSize(12).text(`Page ${pageNum}`, pageWidth / 2, pageHeight - 10, {
+      align: 'center'
+    });
+    if (i + perPage < images.length) pdf.addPage();
     pageNum++;
   }
 
   // Attachments listing
-  if(attachments.length>0){
-    if(images.length>0) pdf.addPage();
-    pdf.setFontSize(20).setFont('helvetica','bold');
-    pdf.text("Attached Files", pageWidth/2, 30, { align: 'center' });
-    pdf.setFontSize(10).setFont('helvetica','normal');
-    let startY=60, iconSize=20, padding=20;
-    for(const att of attachments){
+  if (attachments.length > 0) {
+    if (images.length > 0) pdf.addPage();
+    pdf.setFontSize(20).setFont('helvetica', 'bold');
+    pdf.text("Attached Files", pageWidth / 2, 30, {
+      align: 'center'
+    });
+    pdf.setFontSize(10).setFont('helvetica', 'normal');
+    let startY = 60,
+      iconSize = 20,
+      padding = 20;
+    for (const att of attachments) {
       pdf.text(`📎 ${att.name}`, padding, startY);
-      startY+=iconSize+10;
-      if(startY>pageHeight-padding){ pdf.addPage(); startY=40; }
+      startY += iconSize + 10;
+      if (startY > pageHeight - padding) {
+        pdf.addPage();
+        startY = 40;
+      }
     }
-    pdf.setFontSize(12).text(`Page ${pageNum}`, pageWidth/2,pageHeight-10,{align:'center'});
+    pdf.setFontSize(12).text(`Page ${pageNum}`, pageWidth / 2, pageHeight - 10, {
+      align: 'center'
+    });
   }
 
-  // Create ZIP with PDF + attachments
-  const zip = new JSZip();
-  const pdfBlob = pdf.output('blob');
-  zip.file(`${vessel}_PictureArray.pdf`, pdfBlob);
-  for(const att of attachments){
-    zip.file(att.name, att);
-  }
-  const zipBlob = await zip.generateAsync({type:'blob'});
-  saveAs(zipBlob, `${vessel}_Package.zip`);
+  // Generate filename with desired format
+  const dateFormatted = dateStr.replace(/-/g, '');
+  const filenamePrefix = `${vessel}_PicArray_${antenna}_${location.replace(/ /g, '')}_Case${caseNum}_${dateFormatted}`;
+  const pdfFilename = `${filenamePrefix}.pdf`;
+  const zipFilename = `${filenamePrefix}.zip`;
 
-  statusMessage.textContent = 'ZIP (PDF + attachments) generated successfully!';
-  generateBtn.disabled=false;
+  // Conditional PDF/ZIP generation logic
+  if (attachments.length > 0) {
+    statusMessage.textContent = "Generating ZIP...";
+    const zip = new JSZip();
+    const pdfBlob = pdf.output('blob');
+    zip.file(pdfFilename, pdfBlob);
+    for (const att of attachments) {
+      zip.file(att.name, att);
+    }
+    const zipBlob = await zip.generateAsync({
+      type: 'blob'
+    });
+    saveAs(zipBlob, zipFilename);
+    statusMessage.textContent = 'ZIP (PDF + attachments) generated successfully!';
+  } else {
+    // Only save the PDF if no attachments are present
+    const pdfBlob = pdf.output('blob');
+    saveAs(pdfBlob, pdfFilename);
+    statusMessage.textContent = 'PDF generated successfully!';
+  }
+
+  generateBtn.disabled = false;
 });
 
 // Helpers
