--- a/index.html
+++ b/index.html
@@ -229,7 +229,9 @@
 <div class="container">
 <div class="header-container">
   <div class="header-title">
-    <img src="https://raw.githubusercontent.com/pgarciafer/pics2PDF/main/logo.png" alt="Logo">
+    <a href="https://www.mtnsat.com" target="_blank">
+      <img src="https://raw.githubusercontent.com/pgarciafer/pics2PDF/main/logo.png" alt="Logo">
+    </a>
     <span>Pictures Array to PDF</span>
   </div>
   <a href="contact.html" class="contact-btn">Contact</a>
